traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.error
Compilation error:
TraversalDiagonal:11: error: ':' expected but ')' found.
  def diagonale(y){
                 ^TraversalDiagonal:21: error: identifier expected but '}' found.
}
^